# buba_engine

./: .gitignore  CMakeLists.txt  README.md
config/: README.in
doc/: concept.md  database_model.md  database_project.class.plantuml  readme.md
poc/: CMakeLists.txt
poc/libofx/: CMakeLists.txt
poc/libofx/src/: main.cpp
poc/spdlog/: CMakeLists.txt
poc/spdlog/src/: main.cpp
source/: CMakeLists.txt  buba.pc.in
source/doc/: database_model.md  database_project.class.plantuml
source/inc/: database_project.h  importer_ofx.h  parser_ofx.h  template.h
source/interface/: buba.h  interface_template.h
source/res/: template.buba
source/src/: buba.cpp  database_project.cpp  importer_ofx.cpp  parser_ofx.cpp  template.cpp
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
test/unit_test/inc/: test_helper.h
test/unit_test/src/: main.cpp  test_template.cpp
